<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlassWorkDeviceInfo</string>
    <string name="about_us">About Us</string>
    <string name="about_developer">GlassworkDeviceInfo app is developed by Nat Srileeannop.</string>
    <string name="hello_world">Hello world!</string>
	<string name="retriving_log">Please wait....retriving logcat</string>
	<string name="select_app">"Please select app for sending locat to</string>
	<string name="retriving_log_fail">"FAIL!! Unable to retrive logcat"</string>
	<string name="title_activity_apk_list">Installed Applcaition list</string>
	<string name="email_subject">Logcat attached</string>
	<string name="appicon">Application Icon:</string>
    <string name="apkname">Application Name:</string>
    <string name="package_name">Package Name:</string>
    <string name="version">Application Version:</string>
    <string name="features">Required Features:</string>
    <string name="permissions">Required Permissions:</string>
    <string name="req_version">Taget Android SDK Version:</string>
    <string name="path_info">Application Path:</string>
    <string name="appsize">Physical Size</string>
    <string name="installed">Installed:</string>
    <string name="modified">Last Modified:</string>
    <string name="appMem">Application Memory Usage:</string>
    <string name="vm_heap_size">VM Heap Size:</string>
    <string name="allocated_vm_memory">Allocated VM Memory:</string>
    <string name="vm_heap_size_limit">VM Heap Size Total:</string>
    <string name="native_allocated_memory">Native Allocated Memory:</string>
    <string name="about_details">This app will help all Zynga QA will be able to get more application testing data and useful for bug opening.</string>
    <string name="about_contact">Please feel free to contact me for any feedback via nsrileeannop@zynga.com</string>
	<!--  <string name="device_info_fmt">
Log Collector version: <xliff:g id="application_version">%s</xliff:g>\n
Device model: <xliff:g id="device_model">%s</xliff:g>\n
Firmware version: <xliff:g id="firmware_revision">%s</xliff:g>\n
Kernel version: <xliff:g id="kernel_version">%s</xliff:g>\n
Build number: <xliff:g id="build_number">%s</xliff:g>\n
    </string> --> 
    
</resources>
