<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="460dp" >
 
        <TextView
            android:id="@+id/apk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="24dp"
            android:text="@string/apkname"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/applabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apk"
            android:paddingLeft="24dp"
            android:textSize="12sp" />
 
        <TextView
            android:id="@+id/pack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/applabel"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/package_name"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pack_name"
            android:paddingLeft="24dp"  
            android:textSize="12sp"/>
 
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/package_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/version"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version"
            android:paddingLeft="24dp"  
            android:textSize="12sp"/>
 
<!--         <TextView
            android:id="@+id/features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/features"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/req_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/features"
            android:paddingLeft="24dp" 
            android:textSize="12sp"/>   -->
 
 		<TextView
            android:id="@+id/and_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/req_version"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/andversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/and_version"
            android:paddingLeft="24dp"  
            android:textSize="12sp"/>
 
 		<TextView
            android:id="@+id/path_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/andversion"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/path_info"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path_info"
            android:paddingLeft="24dp"  
            android:textSize="12sp"/>
 
        <TextView
            android:id="@+id/permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/permissions"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/req_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/permissions"
            android:paddingLeft="24dp" 
            android:textSize="12sp"/>
 
        <TextView
            android:id="@+id/installed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/req_permission"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/installed"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/insdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/installed"
            android:paddingLeft="24dp"  
            android:textSize="12sp"/>
 
        <TextView
            android:id="@+id/modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insdate"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/modified"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/last_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/modified"
            android:paddingLeft="24dp" 
            android:textSize="12sp"/>
        
        <TextView
            android:id="@+id/appMem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_modify"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:text="@string/appMem"
            android:textStyle="bold" 
            android:textSize="15sp"/>
 
        <TextView
            android:id="@+id/appMem_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appMem"
            android:paddingLeft="24dp" 
            android:textSize="12sp"/>
        
        
        
        
        <Button
            android:id="@+id/lApp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/apk"
            android:layout_alignBottom="@+id/apk"
            android:layout_alignParentRight="true"
            android:onClick="launchAppClick"
            android:text="Launch App" />

       <!--  <Button
            android:id="@+id/lSS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/version"
            android:layout_alignLeft="@+id/lApp"
            android:layout_alignParentRight="true"
            android:onClick="launchAndSSClick"
            android:text="Launch &amp; SS" 
            android:textSize="12sp" />  

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignBottom="@+id/req_feature"
            android:layout_alignLeft="@+id/lSS"
            android:layout_alignTop="@+id/version" /> -->

        <Button
            android:id="@+id/resetBlob"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/version"
            android:layout_alignParentRight="true"
            android:onClick="ResetUserBlob"
            android:text="Reset Blob" />

        <Button
            android:id="@+id/emailBlob"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/resetBlob"
            android:onClick="emailBlob"
            android:text="Email Blob" />
        
    </RelativeLayout>
 
</ScrollView>
